log
ju., 12 de may. de 2022 11:49:19: 
 sudoku.c | 60 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 59 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:9: error: redefinition of 'num'
     int num[8] = {0};
         ^~~
sudoku.c:50:9: note: previous definition of 'num' was here
     int num[8] = {0};
         ^~~
Compilation failed
f30ee2e
ju., 12 de may. de 2022 11:52:41: 
 sudoku.c | 26 ++++++++++++--------------
 1 file changed, 12 insertions(+), 14 deletions(-)
 tests:  0|0
   [ INFO ] obteniendo nodos adyacentes
03f69e8
